# ShaderNodes

./: .gitmodules  CMakeLists.txt  README.md
include/: GraphVerification.hpp  GraphVisitor.hpp  NodePin.hpp  NodePresets.hpp  NodeValue.hpp  Nodes.hpp  ShaderGraph.hpp  types.hpp
include/generators/: FunctionImplDatabase.hpp  GLSLFunctionGenerator.hpp  GLSLGenerator.hpp  SPIRVGenerator.hpp
include/gui/: Editor.hpp  ImGuiStyle.hpp  MenuBar.hpp  NodeBuilder.hpp  NodeCanvas.hpp  NodeID.hpp  NodeList.hpp
src/: CMakeLists.txt  GraphVerification.cpp  GraphVisitor.cpp  NodePin.cpp  NodePresets.cpp  Nodes.cpp  ShaderGraph.cpp  main.cpp
src/generators/: FunctionImplDatabase.cpp  GLSLFunctionGenerator.cpp  GLSLGenerator.cpp  SPIRVGenerator.cpp
src/gui/: Editor.cpp  ImGuiStyle.cpp  MenuBar.cpp  NodeBuilder.cpp  NodeCanvas.cpp  NodeList.cpp
